# sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
python/: redswitch.py  setup.py
redswitch/: __init__.py
typescript/: package.json
typescript/src/: index.ts
