[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redswitch"
version = "0.1.3"
description = "The failsafe for autonomous AI agents - dead man's switch for AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Evan Hubert", email = "protocol@redswitch.ai"}
]
keywords = [
    "ai",
    "agents",
    "autonomous",
    "failsafe",
    "dead-mans-switch",
    "lifecycle",
    "shutdown",
    "heartbeat",
    "safety"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[project.urls]
Homepage = "https://redswitch.ai"
Documentation = "https://redswitch.ai/docs"
Repository = "https://github.com/Redswitch-Ai/sdk"
Issues = "https://github.com/Redswitch-Ai/sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["redswitch*"]
